<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:text="@string/password_dialog_title" />

    <EditText
        android:id="@+id/dialog_password_content" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:singleLine="true"
        >
        <requestFocus />
     </EditText>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="10dip">
        <Button 
            android:id="@+id/dialog_button_ok"
            android:layout_alignParentLeft="true"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/pwd_dialog_bnt_ok"/>
        <Button 
            android:id="@+id/dialog_button_cancel"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dialog_button_ok"
            android:layout_marginLeft="35dip"
            android:clickable="true"
            android:text="@string/pwd_dialog_bnt_cancel"/>
    </RelativeLayout>

</LinearLayout>
